--- a/contatos/templates/contatos/ver_contato.html
+++ b/contatos/templates/contatos/ver_contato.html
@@ -3,27 +3,27 @@
 {% block conteudo %}
 
 
-        <h1 class="mt-5">{{contato.nome}}  {{contato.sobrenome}}</h1>
-        <dl>
-          <dt>ID</dt>
-          <dd>{{contato.id}}</dd>
+<h1 class="mt-5">{{contato.nome}} {{contato.sobrenome}}</h1>
+<dl>
+    <dt>ID</dt>
+    <dd>{{contato.id}}</dd>
 
-          <dt>Telefone</dt>
-          <dd>{{contato.telefone}}</dd>
+    <dt>Telefone</dt>
+    <dd>{{contato.telefone}}</dd>
 
-          <dt>E-mail</dt>
-          <dd>{{contato.email}}</dd>
+    <dt>E-mail</dt>
+    <dd>{{contato.email}}</dd>
 
-          <dt>Data criação</dt>
-          <dd>{{contato.data_criacao |date:'d/m/Y'}}</dd>
+    <dt>Data criação</dt>
+    <dd>{{contato.data_criacao |date:'d/m/Y'}}</dd>
 
-          <dt>Categoria</dt>
-          <dd>{{contato.categoria}}</dd>
+    <dt>Categoria</dt>
+    <dd>{{contato.categoria}}</dd>
 
-          <dt>Descrição</dt>
-          <dd>
-          {{contato.descricao}}
-          </dd>
-        </dl>
+    <dt>Descrição</dt>
+    <dd>
+        {{contato.descricao}}
+    </dd>
+</dl>
 
-{%endblok%}
+{%endblock%}
