--- a/contatos/templates/contatos/ver_contato.html
+++ b/contatos/templates/contatos/ver_contato.html
@@ -4,6 +4,12 @@
 
 
 <h1 class="mt-5">{{contato.nome}} {{contato.sobrenome}}</h1>
+
+ {% if contato.foto %}
+      <p>
+          <img src="{{ contato.foto.url }}" style="max-width: 250px; height: auto;">
+      </p>
+ {% endif %}
 <dl>
     <dt>ID</dt>
     <dd>{{contato.id}}</dd>
