--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,7 @@
             </div>
           </div>
         </form>
-        {% endif
-        %}
+        {% endif %}
 
         {% block conteudo %}{%endblock%}
       </div>
